# thesis_ma_jonas

./: .gitignore  Dockerfile  README.md  ai_rec.py  ai_search.py  app.py  content_based.py  cosine.py  database.py  mobile_error.html  open_ai.py  pyproject.toml  recommendations.py  replit.nix  requirements.txt  user_db.py
deployment/: Makefile  README.md  cert.yaml  deployment.yaml  ingress-app.yaml  ingress-nginx.yaml  ingress.yaml  main.tf  pod.yaml  tls.yaml
scripts/: dashboard.bat  dockerrun.bat  identities.bat  init.bat  pushtocloud.bat  vars.bat
static/: favorite.js
templates/: ai_rec.html  best.html  bootstrap.html  carousel.html  compulsory.html  content_based.html  courseitem.html  coursepage.html  courses.html  disclaimer.html  explore.html  favourites.html  footer.html  home.html  inlogpage.html  last_viewed.html  login.html  message.html  navbar.html  profile.html  random.html  register.html  search.html  sequence.html  star.html  submit.html  welcome.html
